	Added example files for isochronic tones in different frequency ranges
	Rebranded as SBaGen+ to indicate the fork from the original project
	Fixed bug with WAV file duration when using -W option with sequence files
	Improved error handling for Carbon.h inclusion on modern macOS
	Enhanced mk-macos script with -universal option for building universal binaries

1.4.5   Update Mac OSX build to use Intel 32-bit

1.4.4   Fixes to support sound output on Vista
	Make "Edit sequence" work on WinXP
	Default to 60-minutes for WAV-output if a length can't be established
	"Write to WAV (30 min)" option for Windows
	Stop status line wrapping on Windows

1.4.3	Fixed problem when playing 7+ hour sequences with -SE or -L
	Warns properly if the WAV file limit of ~7 hours is exceeded, and truncates

1.4.2	Handles playing sequences to the clock across a daylight savings time change
	Improved Linux /dev/dsp initialisation to get a good fragment size
	Fixed OGG setup bug that affected some Linux systems when playing river sounds

1.4.1	Added wakeup option to -p drop
	Permitted duration of -p drop session to be modified
	Added ReplayGain handling for OGG files
	Applied vorbisgain to river sound files
	Added support for writing to a WAV file through Windows right-click menu
	River sounds now distributed in separate archive, except on Windows

1.4.0	Added support for randomly looping OGG files with SBAGEN_LOOPER tag
	Added two standard looping river sounds OGG files to archive
	Added <carr>/<amp> for handling plain sine tones (no beats)
	Sequence (SBG) files may now contain all options, including -i and -p
	Added -d option to select a different /dev/dsp device
	Added -c option to compensate for low-frequency rolloff of audio equipment
	Added bail-out code so that thread terminates correctly if other one dies
	Added -p drop builtin predefined sequence (thanks to Jonathan Bisson for 
	  the first version of this code)
	Added -p slide builtin predefined sequence